@@ -1,12 +1,12 @@
 /*******************************************************************************
- * Portions created by Sebastian Thomschke are copyright (c) 2005-2010 Sebastian
+ * Portions created by Sebastian Thomschke are copyright (c) 2005-2013 Sebastian
  * Thomschke.
- * 
+ *
  * All Rights Reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
- * 
+ *
  * Contributors:
  *     Sebastian Thomschke - initial implementation.
  *******************************************************************************/
@@ -24,9 +24,14 @@ public class ValidatorSpringBeanTest extends TestCase
 	{
 		final ClassPathXmlApplicationContext ctx = new ClassPathXmlApplicationContext("ValidatorSpringBeanTest.xml",
 				ValidatorSpringBeanTest.class);
-		final Validator validator = ctx.getBean("validator", Validator.class);
-
-		final XMLConfigurationTest test = new XMLConfigurationTest();
-		test.validateUser(validator);
+		try
+		{
+			final Validator validator = ctx.getBean("validator", Validator.class);
+			new XMLConfigurationTest().validateUser(validator);
+		}
+		finally
+		{
+			ctx.close();
+		}
 	}
 }
