@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.springframework.org/schema/beans"
-	xmlns:context="http://www.springframework.org/schema/context"
+<beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.springframework.org/schema/beans" xmlns:context="http://www.springframework.org/schema/context"
 	xsi:schemaLocation="
 	http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd
 	http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-2.5.xsd"
@@ -11,6 +10,8 @@
 	<bean class="net.sf.oval.integration.spring.SpringInjector" />
 
 	<!-- this object gets injected -->
-	<bean id="springConstraintBean" class="java.lang.Object" />
+	<bean id="SPRING_MANAGED_BEAN" class="java.lang.Integer">
+		<constructor-arg value="10" />
+	</bean>
 
 </beans>
